@@ -30,6 +30,7 @@ New in 0.9.18:
 * :exec REPL command now takes an optional expression to compile and run/show
 * The return types of `Vect.findIndex`, `Vect.elemIndex` and
   `Vect.elemIndexBy` were changed from `Maybe Nat` to `Maybe (Fin n)`
+* A new :browse command shows the contents of a namespace
 
 New in 0.9.17:
 --------------
